--- a/ts/package.json
+++ b/ts/package.json
@@ -6,14 +6,14 @@
   "devDependencies": {
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "@types/node": "^18.11.10",
   },
   "scripts": {
     "cp": "nodemon cp.ts",
     "cs": "nodemon cs.ts"
   },
   "dependencies": {
-    "@types/node": "^18.11.10",
     "ocpp-ts": "^0.3.0"
   }
 }
